--- a/style.css
+++ b/style.css
@@ -119,3 +119,88 @@ section{
     left: 30px;
     bottom: 30px;
 }
+.skills-card{
+    background-image: url(img/form3.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 450px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 100px;
+    margin: 20px;
+    padding-left: 10px;
+}
+.skills-card p{
+    color: #000;
+    font-size: 18px;
+    margin-top: 80px;
+    margin-bottom: 30px;
+    text-align: center;
+    max-width: 500px;
+    font-family: "Comfortaa";
+}
+.moving-planet2{
+    background: url(img/moving-planet2.png);
+    background-repeat: no-repeat;
+    width: 208px;
+    height: 200px;
+    position: absolute;
+    left: 0px;
+    bottom: 70px;
+}
+.moving-planet, .moving-cloud, .moving-planet2{
+    animation-name: planet-move;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+.works-block img{
+    margin: 0 20px;
+    width: 27%;
+    box-shadow: 7px 7px 0 #000000;
+}
+.comments-block {
+    justify-content: space-evenly;
+    max-width: 1150px;
+    margin: auto;
+}
+.comment-card{
+    background-image: url(img/card.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 200px;
+}
+.comment-card h3{
+    font-size: 18px;
+    font-family: "Comfortaa";
+    padding: 10px
+}
+.comment-card p{
+    font-size: 14px;
+    font-family: "Comfortaa";
+    padding: 10px 20px;
+    text-align: center;
+}
+.comment{
+    background-image: url(img/comment.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    width: 327px;
+    height: 161px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.comment p{
+    font-size: 20px;
+    font-family: "Comfortaa";
+    max-width: 250px;
+}
