--- a/style.css
+++ b/style.css
@@ -311,3 +311,120 @@ nav{
 .active{
     background-color: #BBFF2c;
 }
+@media (max-width: 1000px){
+    .nav-links{
+        display: none;
+    }
+    .logo{
+        font-size: 40px;
+        padding-left: 20px;
+        padding-top: 10px;
+    }
+    .main-content{
+        max-width: 320px;
+    }
+    .main-title{
+        padding-top: 30px;
+        font-size: 30px;
+    }
+    .main-block .button{
+        height: 25px;
+        width: 25%;
+    }
+    .main-block .button a{
+        font-size: 15px;
+    }
+    .main-subtitle{
+        font-size: 15px;
+    }
+    .planet, .moving-clud, .moving-planet2{
+        display: none;
+    }
+    .title{
+        font-size: 50px;
+        padding-top: 30px;
+    }
+    .about-block{
+        flex-direction: column;
+        margin-top: 20px;
+        padding: 0;
+    }
+    .about-card{
+        order: -1;
+        background-size: contain;
+        padding-top: 20px;
+        width: 326px;
+        height: 296px;
+    }
+    .about-card img{
+        width: 85%;
+    }
+    .about-content{
+        width: 75%;
+        height: 250px;
+        margin-bottom: 20px;
+    }
+    .about-title{
+        font-size: 18px;
+    }
+    .about-text .button{
+        height: 25px;
+        width: 40%;
+    }
+    .about-text .button a{
+        font-size: 15px;
+    }
+    .skills-card{
+        margin: 20px;
+        padding-left: 10px;
+        background-size: contain;
+    }
+    .skills-card p{
+        font-size: 16px;
+        margin-top: 15%;
+        margin-bottom: 20px;
+    }
+    .skills-section{
+        min-height: 60vh;
+    }
+    .skills-card .button{
+        position: absolute;
+        bottom: 100px;
+        height: 25px;
+        width: 25%;
+    }
+    .skills-card .button a{
+        font-size: 15px;
+    }
+    .works-section{
+        flex-direction: column;
+        padding: 20px 0;
+    }
+    .works-block img{
+        width: 80%;
+        margin: 20px 0;
+    }
+    .comments-block{
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        margin: 0 auto;
+        padding-top: 50px;
+    }
+    .comment{
+        background-image: url(img/comment-mobile.png);
+    }
+    .comment p{
+        max-width: 290px;
+        font-size: 15px;
+    }
+    footer{
+        height: 200px;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+    .footer-info{
+        text-align: center;
+    }
+}
