--- a/style.css
+++ b/style.css
@@ -311,7 +311,40 @@ nav{
 .active{
     background-color: #BBFF2c;
 }
+.mobile-button{
+    display: none;
+    width: 40px;
+    position: absolute;
+    padding-top: 20px;
+    right: 20px;
+}
+.hide{
+    display: none;
+}
+.mobile-menu{
+    position: absolute;
+    top: 0;
+    z-index: -1;
+    width: 100%;
+    background-color: #200153;
+    min-height: 100vh;
+}
+.mobile-nav{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.mobile-nav-links .nav-link{
+    margin-bottom: 30px;
+    width: 210px;
+    height: 50px;
+}
 @media (max-width: 1000px){
+    .mobile-button{
+        display: block;
+    }
     .nav-links{
         display: none;
     }
@@ -427,4 +460,6 @@ nav{
     .footer-info{
         text-align: center;
     }
+
+
 }
